<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dpi_toggle"
        android:title="@string/main_dpi_switch"
        app:actionLayout="@layout/action_dpi_switch"
        app:showAsAction="always" />

    <item
        android:id="@+id/search_view"
        android:icon="@drawable/ic_outline_filter_alt_24"
        android:title="@string/menu_item_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/sub_update"
        android:title="@string/title_sub_update"
        app:showAsAction="never" />

    <item
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/dragon_menu_import_add"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/import_qrcode" android:title="@string/menu_item_import_config_qrcode" />
            <item android:id="@+id/import_clipboard" android:title="@string/menu_item_import_config_clipboard" />
            <item android:id="@+id/import_local" android:title="@string/menu_item_import_config_local" />
            <item android:id="@+id/import_from_file" android:title="@string/dragon_import_from_file" />
            <item android:title="@string/dragon_menu_create_manual">
                <menu>
                    <item android:id="@+id/import_manually_policy_group" android:title="@string/menu_item_import_config_policy_group" />
                    <item android:id="@+id/import_manually_proxy_chain" android:title="@string/menu_item_import_config_proxy_chain" />
                    <item android:id="@+id/import_manually_vmess" android:title="@string/menu_item_import_config_manually_vmess" />
                    <item android:id="@+id/import_manually_vless" android:title="@string/menu_item_import_config_manually_vless" />
                    <item android:id="@+id/import_manually_ss" android:title="@string/menu_item_import_config_manually_ss" />
                    <item android:id="@+id/import_manually_socks" android:title="@string/menu_item_import_config_manually_socks" />
                    <item android:id="@+id/import_manually_http" android:title="@string/menu_item_import_config_manually_http" />
                    <item android:id="@+id/import_manually_trojan" android:title="@string/menu_item_import_config_manually_trojan" />
                    <item android:id="@+id/import_manually_wireguard" android:title="@string/menu_item_import_config_manually_wireguard" />
                    <item android:id="@+id/import_manually_hysteria2" android:title="@string/menu_item_import_config_manually_hysteria2" />
                </menu>
            </item>
        </menu>
    </item>

    <item android:title="@string/dragon_menu_tests" app:showAsAction="never">
        <menu>
            <item android:id="@+id/smart_test_all" android:title="@string/title_smart_test_all_server" />
            <item android:id="@+id/tcp_ping_all" android:title="@string/title_tcp_test_all_server" />
            <item android:id="@+id/real_ping_all" android:title="@string/title_handshake_test_all_server" />
            <item android:id="@+id/clear_test_results" android:title="@string/title_clear_test_results" />
            <item android:id="@+id/cancel_all_tests" android:title="@string/title_cancel_all_tests" />
            <item android:id="@+id/sort_by_test_results" android:title="@string/title_sort_by_test_results" />
            <item android:id="@+id/locate_selected_config" android:title="@string/title_locate_selected_config" />
        </menu>
    </item>

    <item android:title="@string/dragon_menu_export" app:showAsAction="never">
        <menu>
            <item android:id="@+id/export_all" android:title="@string/title_export_all" />
            <item android:id="@+id/export_to_file" android:title="@string/dragon_export_all_to_file" />
        </menu>
    </item>

    <item android:title="@string/dragon_menu_cleanup" app:showAsAction="never">
        <menu>
            <item android:id="@+id/clear_profile_traffic" android:title="@string/title_clear_profile_traffic" />
            <item android:id="@+id/del_duplicate_config" android:title="@string/title_del_duplicate_config" />
            <item android:id="@+id/del_invalid_config" android:title="@string/title_del_invalid_config" />
            <item android:id="@+id/del_all_config" android:title="@string/title_del_all_config" />
        </menu>
    </item>

    <item
        android:id="@+id/service_restart"
        android:title="@string/title_service_restart"
        app:showAsAction="never" />
</menu>
