<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_main" android:checkableBehavior="single">
        <item
            android:id="@+id/configuration"
            android:checked="true"
            android:icon="@drawable/ic_file_24dp"
            android:title="@string/nav_configuration" />
        <item
            android:id="@+id/sub_setting"
            android:icon="@drawable/ic_subscriptions_24dp"
            android:title="@string/nav_groups" />
        <item
            android:id="@+id/routing_setting"
            android:icon="@drawable/ic_routing_24dp"
            android:title="@string/nav_routes" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/title_settings" />
    </group>

    <group android:id="@+id/group_tools">
        <item
            android:id="@+id/logcat"
            android:icon="@drawable/ic_logcat_24dp"
            android:title="@string/nav_logs" />
        <item
            android:id="@+id/tools"
            android:icon="@drawable/ic_restore_24dp"
            android:title="@string/nav_tools" />
    </group>

    <group android:id="@+id/group_info">
        <item
            android:id="@+id/documents"
            android:icon="@drawable/ic_file_24dp"
            android:title="@string/nav_documents" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about_24dp"
            android:title="@string/title_about" />
        <item
            android:id="@+id/placeholder"
            android:enabled="false"
            android:title="" />
    </group>
</menu>
